Added styles to complete chapter 9.

--- a/SportsStore.WebUI/Views/Cart/Completed.cshtml
+++ b/SportsStore.WebUI/Views/Cart/Completed.cshtml
@@ -4,4 +4,4 @@
 
 <h2>Thanks!</h2>
 
-Thanks fr placeing your order. We'll shi your goods as soon as possible
+Thanks for placing your order. We'll ship your goods as soon as possible
